--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
         canvas: document.getElementById('canvas')
       }
     </script>
-    <script async type="text/javascript" src="figment.js"></script>
+    <script async type="text/javascript" src="index.js"></script>
 </body>
 </html>
