--- a/engine/index.html
+++ b/engine/index.html
@@ -73,7 +73,7 @@
       {
           const js = document.createElement('script');
           js.async = true;
-          js.src = "figment_wasm.js";
+          js.src = "engine.js";
           document.body.appendChild(js);
       }
       })();
