--- a/editor/index.html
+++ b/editor/index.html
@@ -31,7 +31,7 @@
             -ms-interpolation-mode: nearest-neighbor;
         }
 
-        .editor {
+        .editor-container {
             position: absolute;
             bottom: 0;
             right: 0;
@@ -39,6 +39,12 @@
             border: 0;
             width: 40%;
             height: 40%;
+            overflow: hidden;
+            display: block;
+        }
+        .editor {
+            width: 100%;
+            height: 100%;
             overflow: hidden;
             display: block;
         }
@@ -96,8 +102,12 @@
     })();
 </script>
 
-<div id="container" class="editor" ></div>
-<script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.22.3/min/vs/loader.js"></script>
+<div class="editor-container">
+<button onclick="EditorExecute()">Execute</button>
+    <div id="container" class="editor" ></div>
+
+</div>
+<script src="https://cdn.jsdelivr.net/npm/monaco-editor@0.47.0/min/vs/loader.js"></script>
 <script type='text/javascript'>
     Editor = {};
     EditorExecute = function() {
@@ -107,7 +117,7 @@
     };
 </script>
 <script>
-    require.config({ paths: { 'vs': 'https://cdn.jsdelivr.net/npm/monaco-editor@0.22.3/min/vs' }});
+    require.config({ paths: { 'vs': 'https://cdn.jsdelivr.net/npm/monaco-editor@0.47.0/min/vs' }});
     require(['vs/editor/editor.main'], function() {
         Editor = monaco.editor.create(document.getElementById('container'), {
             value: [
